# DebridDownloader

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: build.yml
docs/: index.html  privacy.html
docs/superpowers/plans/: 2026-03-18-inline-video-streaming.md  2026-03-21-preview-video-button.md  2026-03-23-symlink-mode.md
docs/superpowers/specs/: 2026-03-15-ui-redesign-design.md  2026-03-18-inline-video-streaming-design.md  2026-03-23-rclone-integration-design.md  2026-03-24-watch-list-design.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: downloader.rs  lib.rs  rclone.rs  streaming.rs  tmdb.rs  watchlist.rs
src-tauri/src/commands/: auth.rs  downloads.rs  magnet.rs  mod.rs  search.rs  watchlist.rs
src-tauri/src/providers/: types.rs
src-tauri/src/scrapers/: mod.rs  piratebay.rs  prowlarr.rs  torznab.rs  utils.rs
src/api/: downloads.ts  magnet.ts  media_servers.ts  rclone.ts  watchlist.ts
src/components/: AddTorrentModal.tsx  DataTable.tsx  Layout.tsx  Sidebar.tsx  TableToolbar.tsx  VideoPlayer.tsx
src/hooks/: useAccentColor.ts  useMagnetLinkListener.ts  useRclone.ts
src/pages/: AboutPage.tsx  AuthPage.tsx  CompletedPage.tsx  DownloadsPage.tsx  SearchPage.tsx  SettingsPage.tsx  TorrentsPage.tsx  WatchListPage.tsx
src/styles/: index.css
src/types/: index.ts
