[package]
name = "debriddownloader"
version = "1.1.5"
description = "Real-Debrid Torrent Downloader"
authors = ["Jonathan"]
license = "GPL-3.0-or-later"
edition = "2021"

[lib]
name = "debriddownloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
keyring = { version = "3", features = ["apple-native", "windows-native"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
urlencoding = "2"
async-trait = "0.1"
quick-xml = "0.37"
sha1 = "0.10"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"

[target.'cfg(target_os = "linux")'.dependencies]
dirs = "6"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
